# BadOS-Shell-System

./: .gitignore  Cargo.toml  LICENSE  README.md  arm64-bad_os.json  x84_64-bad_os.json
.cargo/: config.toml
.github/workflows/: rust.yml
bootloader/: README.md
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs
