[package]
name = "BadOS-Shell-System"
version = "0.1.0-dev"
authors = ["Logan Dhillon"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/LDMGamingYT/BadOS-Shell-System/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"