[package]
name = "bad_os_shell_system"
version = "0.1.0-dev"
authors = ["Logan Dhillon"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/LDMGamingYT/BadOS-Shell-System/"
edition = "2021"

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
